# py-patterns

./: .gitignore  Makefile  README.md  pyproject.toml
py_patterns/: base.py
py_patterns/adapters/: __init__.py  adapter.py
tests/: test_py_patterns.py
tests/adapters/: test_adapter.py
